<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent">

    <LinearLayout
        android:background="@drawable/rectangle_round_gray_2dp"
        android:elevation="16dp"
        android:id="@+id/loginLayout"
        android:orientation="vertical"
        android:layout_width="340dp"
        android:layout_marginTop="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fragment_login_title"
                android:id="@+id/textView2"
                android:gravity="center"
                android:padding="12dp"/>

        </RelativeLayout>

        <EditText
            android:hint="@string/fragment_login_login"
            android:singleLine="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEditText"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_marginLeft="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginRight="32dp"
            android:hint="@string/fragment_login_password"
            android:singleLine="true"
            android:id="@+id/passwordEditText"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_rememberme"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/remembermeCheckBox"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_login_confirm"
                android:id="@+id/loginButton"
                android:minWidth="90dp"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:minWidth="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragemnt_login_cancel"
                android:id="@+id/cancelButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginProgressBar"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>